# rust-guessing-game

./: .gitignore  README.md  test.sh
.handovers/: 001_phase2_switchboard_vrf.md  002_four_demos_milestone.md  003_phase2_tests_and_cost_analysis.md  004_project_closeout.md  005_phase3_magicblock_vrf.md  006_phase4_tournament.md
.issues/: 001_broken_rand_demo.md  002_multiplayer_tournament.md
docs/: on-chain-randomness-lesson.md  phase1-commit-reveal.md  phase2-switchboard-vrf.md  phase3-magicblock-vrf.md  solana-anchor-patterns.md
on-chain/: Anchor.toml  Cargo.toml  package.json
on-chain/demos/broken-rand/: Cargo.toml
on-chain/demos/broken-rand/src/: instructions.rs  lib.rs
on-chain/demos/broken-rand/src/instructions/: try_random.rs
on-chain/programs/broken-rand/: Cargo.toml
on-chain/programs/on-chain/: Cargo.toml
on-chain/programs/on-chain/src/: error.rs  instructions.rs  lib.rs  state.rs
on-chain/programs/on-chain/src/instructions/: close_game.rs  guess.rs  initialize.rs  reveal.rs
on-chain/programs/on-chain/tests/: test_initialize.rs
on-chain/programs/phase2-vrf/: Cargo.toml
on-chain/programs/phase2-vrf/src/: constants.rs  error.rs  instructions.rs  lib.rs  state.rs
on-chain/programs/phase2-vrf/src/instructions/: close_game.rs  guess.rs  initialize.rs  settle_random.rs
on-chain/programs/phase2-vrf/tests/: test_phase2.rs
on-chain/programs/phase3-magicblock-vrf/: Cargo.toml
on-chain/programs/phase3-magicblock-vrf/src/: constants.rs  error.rs  instructions.rs  lib.rs  state.rs
on-chain/programs/phase3-magicblock-vrf/src/instructions/: close_game.rs  consume_randomness.rs  guess.rs  initialize.rs  request_randomness.rs
on-chain/programs/phase3-magicblock-vrf/tests/: test_phase3.rs
on-chain/programs/phase4-tournament/: Cargo.toml
on-chain/programs/phase4-tournament/src/: constants.rs  error.rs  instructions.rs  lib.rs  state.rs
on-chain/programs/phase4-tournament/src/instructions/: close_tournament.rs  create_tournament.rs  join_tournament.rs  settle_tournament.rs  submit_guess.rs
on-chain/programs/phase4-tournament/tests/: test_phase4.rs
on-chain/scripts/: build-broken-rand.ts  cost-analysis-phase2.ts  demo.sh  play-devnet.ts  play-phase2-devnet.ts  play-phase3-devnet.ts  play-phase4-devnet.ts
