[workspace]

[package]
name = "broken-rand"
version = "0.1.0"
description = "Demo: proves rand crate cannot compile for Solana BPF target"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "broken_rand"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = "1.0.1"
rand = "0.8"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
