[package]
name = "on-chain"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "on_chain"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []
play = [
  "litesvm",
  "hex",
  "solana-message",
  "solana-transaction",
  "solana-signer",
  "solana-keypair",
  "solana-pubkey",
  "solana-account",
  "solana-instruction",
]

[dependencies]
anchor-lang = "1.0.1"
blake3 = "1"

# Optional deps for the play binary only
litesvm = { version = "0.10.0", optional = true }
hex = { version = "0.4", optional = true }
solana-message = { version = "3.0.1", optional = true }
solana-transaction = { version = "3.0.2", optional = true }
solana-signer = { version = "3.0.0", optional = true }
solana-keypair = { version = "3.0.1", optional = true }
solana-pubkey = { version = "3.0", optional = true }
solana-account = { version = "3.0", optional = true }
solana-instruction = { version = "3.0", optional = true }

[[bin]]
name = "play"
path = "src/bin/play.rs"
required-features = ["play"]

[dev-dependencies]
litesvm = "0.10.0"
solana-message = "3.0.1"
solana-transaction = "3.0.2"
solana-signer = "3.0.0"
solana-keypair = "3.0.1"
solana-pubkey = "3.0"
solana-account = "3.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
