[package]
name = "phase2-vrf"
version = "0.1.0"
description = "Guessing game with Switchboard VRF for trustless randomness"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "phase2_vrf"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = "1.0.1"
blake3 = "1"
getrandom = { workspace = true }
switchboard-on-demand = "0.12.1"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
