[package]
name = "phase3-magicblock-vrf"
version = "0.1.0"
description = "Guessing game with MagicBlock VRF for free, fast verifiable randomness"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "phase3_magicblock_vrf"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = "1.0.1"
blake3 = "1"
borsh = "1"
getrandom = { workspace = true }
# Note: ephemeral-vrf-sdk is incompatible with Anchor 1.0.1 (Pubkey type mismatch).
# We inline the VRF constants and build CPI instructions manually.
# See: https://github.com/magicblock-labs/ephemeral-vrf

[dev-dependencies]
litesvm = "0.10.0"
solana-message = "3.0.1"
solana-transaction = "3.0.2"
solana-signer = "3.0.0"
solana-keypair = "3.0.1"
solana-pubkey = "3.0"
solana-account = "3.0"
solana-instruction = "3.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
