[package]
name = "phase4-tournament"
version = "0.1.0"
description = "Multi-player tournament guessing game with Switchboard VRF"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "phase4_tournament"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = "1.0.1"
blake3 = "1"
getrandom = { workspace = true }
switchboard-on-demand = "0.12.1"

[dev-dependencies]
litesvm = "0.10.0"
solana-message = "3.0.1"
solana-transaction = "3.0.2"
solana-signer = "3.0.0"
solana-keypair = "3.0.1"
solana-pubkey = "3.0"
solana-account = "3.0"
solana-instruction = "3.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
